--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -21,6 +21,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="/assets/css/main.css" />
+
+	<link rel="stylesheet" href="/assets/css/jquery-ui.min.css" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="/assets/css/ie9.css" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="/assets/css/ie8.css" /><![endif]-->
 	<link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
@@ -68,105 +70,136 @@
 				<span id="scroller"></span>
 				<h1 id="privacy-policy---plain-english">Privacy Policy - Plain English</h1>
 
-<p>Here is a plain English view of our privacy policy. This is not the actual policy, that is below. This is to explain what we want to tell you in simple terms so that when you read the detailed policy, it is easier to understand.</p>
+<p>Here is a plain English view of our privacy policy. This is not the actual policy, that is below. This is to explain what we want to tell you in simple terms so that when you read the detailed policy, it is easier to understand.
+<a href="#privacy-policy">Full Privacy Policy</a></p>
 
-<h2 id="1-how-we-work-with-others">1. How We Work With Others:</h2>
+<div id="accordion">
 
-<p>Sometimes, we work with others like accountants or designers. They might see some of the info you share with us.</p>
+    <h2>1. How We Work With Others:</h2>
+    <div>
+    Sometimes, we work with others like accountants or designers. They might see some of the info you share with us.
+    </div>
 
-<h2 id="2-our-tools">2. Our Tools:</h2>
+    <h2>2. Our Tools:</h2>
+    <div>
+    We use best in class tools from big companies like Google and Microsoft. They have their own rules for how they handle your info when we use their tools.
+    </div>
 
-<p>We use best in class tools from big companies like Google and Microsoft. They have their own rules for how they handle your info when we use their tools.</p>
+    <h2>3. How we use Artificial Intelligence:</h2>
+    <div>
+    We Artificial Intelligence tools to do tasks for you. These tools state that they won't use your info for anything else except what you asked for.
+    </div>
 
-<h2 id="3-how-we-use-artificial-intelligence">3. How we use Artificial Intelligence:</h2>
+    <h2>4. Keeping Your Info Safe:</h2>
+    <div>
+    We take extra steps to keep your info safe, like using strong passwords and segregating your data from other customers.
+    </div>
 
-<p>We Artificial Intelligence tools to do tasks for you. These tools state that they won’t use your info for anything else except what you asked for.</p>
+    <h2>5. How Long We Keep Your Info:</h2>
+    <div>
+    We only keep your info for as long as we need it to do the things you asked us to do. If you want us to delete it, just ask.
+    </div>
 
-<h2 id="4-keeping-your-info-safe">4. Keeping Your Info Safe:</h2>
+    <h2>6. Your Control Over Your Info:</h2>
+    <div>
+    You can decide what happens to your info. You can look at it, ask for a copy, or even tell us to get rid of it.
+    </div>
 
-<p>We take extra steps to keep your info safe, like using strong passwords and segregating your data from other customers.</p>
+    <h2>7. Updates to Our Rules:</h2>
+    <div>
+    Sometimes, we might need to change our rules a bit. If we do, we'll tell you on our website and send you an email.
+    </div>
 
-<h2 id="5-how-long-we-keep-your-info">5. How Long We Keep Your Info:</h2>
+    <h2>8. Need Help or Have Questions?:</h2>
+    <div>
+    If you have questions about your privacy, just get in touch with us using the contact details we've provided.
+    </div>
 
-<p>We only keep your info for as long as we need it to do the things you asked us to do. If you want us to delete it, just ask.</p>
+    <h2>9. Cookies - Tiny Web Helpers:</h2>
+    <div>
+    We use some tiny web helpers (cookies) to make things work better. Other companies' tools we use might also use them.
+    </div>
 
-<h2 id="6-your-control-over-your-info">6. Your Control Over Your Info:</h2>
+    <h2>10. Following the Laws:</h2>
+    <div>
+    We follow the privacy laws in Australia. If we have to share info because of the law, we'll do it the right way.
+    </div>
 
-<p>You can decide what happens to your info. You can look at it, ask for a copy, or even tell us to get rid of it.</p>
+    <h2>11. Children's Privacy:</h2>
+    <div>
+    We don't process data about Children. If someone using our services does, we'll make special rules to keep it safe.
+    </div>
 
-<h2 id="7-updates-to-our-rules">7. Updates to Our Rules:</h2>
-
-<p>Sometimes, we might need to change our rules a bit. If we do, we’ll tell you on our website and send you an email.</p>
-
-<h2 id="8-need-help-or-have-questions">8. Need Help or Have Questions?:</h2>
-
-<p>If you have questions about your privacy, just get in touch with us using the contact details we’ve provided.</p>
-
-<h2 id="9-cookies---tiny-web-helpers">9. Cookies - Tiny Web Helpers:</h2>
-
-<p>We use some tiny web helpers (cookies) to make things work better. Other companies’ tools we use might also use them.</p>
-
-<h2 id="10-following-the-laws">10. Following the Laws:</h2>
-
-<p>We follow the privacy laws in Australia. If we have to share info because of the law, we’ll do it the right way.</p>
-
-<h2 id="11-childrens-privacy">11. Children’s Privacy:</h2>
-
-<p>We don’t process data about Children. If someone using our services does, we’ll make special rules to keep it safe.</p>
-
-<h2 id="12-your-info-outside-australia">12. Your Info Outside Australia:</h2>
-
-<p>Sometimes, your info might go to other countries. We can’t stop it, but we make sure it’s still protected by the rules of those countries.</p>
+    <h2> 12. Your Info Outside Australia:</h2>
+    <div>
+    Sometimes, your info might go to other countries. We can't stop it, but we make sure it's still protected by the rules of those countries.
+    </div>
+</div>
 
 <h1 id="privacy-policy">Privacy Policy</h1>
 
-<h2 id="1-use-of-third-parties">1. Use of Third Parties:</h2>
+<div id="accordion">
+<h2>Use of Third Parties:</h2>
+  <div>
+    From time to time, our business may engage third parties, such as Accountants, Bookkeepers, Designers, Project Managers, Subject Matter Experts, and contractors. These parties may have access to some of the data that you have provided to our business.
+  </div>
 
-<p>From time to time, our business may engage third parties, such as Accountants, Bookkeepers, Designers, Project Managers, Subject Matter Experts, and contractors. These parties may have access to some of the data that you have provided to our business.</p>
+  <h2>Software and Automation Systems:</h2>
+  <div>
+    <p>We rely on top-notch software solutions from companies like Google, Microsoft, Teamwork, and Zapier to run our business efficiently. Please be aware that the privacy policies of these companies will apply to any data shared with our business through their platforms. We recommend checking these policies to understand how your data is handled.</p>
+  </div>
 
-<h2 id="2-software-and-automation-systems">2. Software and Automation Systems:</h2>
+  <h2>Use of Artificial Intelligence Platforms:</h2>
+  <div>
+    <p>We use AI platforms, including tools from Microsoft, Zapier, and OpenAI, to perform tasks on behalf of our clients. The privacy policies of these AI platforms state that data provided to them by us is used exclusively for the specified action, task, or process and is not stored or used for any other purpose, including training their AI models.</p>
+  </div>
 
-<p>We rely on best in class software solutions from companies like Google, Microsoft, Teamwork, and Zapier to run our business efficiently. Please be aware that the privacy policies of these companies will apply to any data shared with our business through their platforms. We recommend checking these policies to understand how your data is handled.</p>
+  <h2>Data Security:</h2>
+  <div>
+    <p>Your data's security is paramount to us. We employ robust measures to safeguard it, including encryption, access controls, regular audits, employee training, and data backups.</p>
+  </div>
 
-<h2 id="3-use-of-artificial-intelligence-platforms">3. Use of Artificial Intelligence Platforms:</h2>
+  <h2>Data Retention:</h2>
+  <div>
+    <p>We will retain your data only for as long as is necessary to perform the tasks you have asked us to do. You can request us at any time to delete all local and cloud-hosted copies of your data.</p>
+  </div>
 
-<p>We use AI platforms, including tools from Microsoft, Zapier, and OpenAI, to perform tasks on behalf of our clients. The privacy policies of these AI platforms state that data provided to them by us is used exclusively for the specified action, task, or process and is not stored or used for any other purpose, including training their AI models.</p>
+  <h2>User Rights and Control:</h2>
+  <div>
+    <p>You have the right to control your data. This includes access, correction, data portability, withdrawal of consent, and deletion.</p>
+  </div>
 
-<h2 id="4-data-security">4. Data Security:</h2>
+  <h2>Updates to Privacy Policy:</h2>
+  <div>
+    <p>From time to time, we may update our policy. If we do so, we will publish the updated policy on our website and email you to inform you about the change.</p>
+  </div>
 
-<p>Your data’s security is paramount to us. We employ robust measures to safeguard it, using strong passwords and segregating your data from our other customers.</p>
+  <h2>Contact Information:</h2>
+  <div>
+    <p>For privacy concerns or queries, you can contact us using the provided information.</p>
+  </div>
 
-<h2 id="5-data-retention">5. Data Retention:</h2>
+  <h2>Cookies and Tracking:</h2>
+  <div>
+    <p>We may use session, persistent, and analytics cookies. Third-party tools may introduce additional cookies, and their cookie policies should be checked.</p>
+  </div>
 
-<p>We will retain your data only for as long as is necessary to perform the tasks you have asked us to do. You can request us at any time to delete all local and cloud-hosted copies of your data.</p>
+  <h2>Compliance with Laws:</h2>
+  <div>
+    <p>We adhere to all Australian and Victorian privacy laws, including those governing disclosure to law enforcement authorities.</p>
+  </div>
 
-<h2 id="6-user-rights-and-control">6. User Rights and Control:</h2>
+  <h2>Children's Privacy:</h2>
+  <div>
+    <p>We do not process data for children. If our customers process data for children, they must inform us, and together, we will agree on a policy for handling this data.</p>
+  </div>
 
-<p>You have the right to control your data. This includes access, correction, data portability, withdrawal of consent, and deletion.</p>
-
-<h2 id="7-updates-to-privacy-policy">7. Updates to Privacy Policy:</h2>
-
-<p>From time to time, we may update our policy. If we do so, we will publish the updated policy on our website and email you to inform you about the change.</p>
-
-<h2 id="8-contact-information">8. Contact Information:</h2>
-
-<p>For privacy concerns or queries, you can contact us through our website. We will work with you to ensure your data is processed in a way that you are comfortable with.</p>
-
-<h2 id="9-cookies-and-tracking">9. Cookies and Tracking:</h2>
-
-<p>We may use session, persistent, and analytics cookies. Third-party tools may introduce additional cookies, and their cookie policies should be checked.</p>
-
-<h2 id="10-compliance-with-laws">10. Compliance with Laws:</h2>
-
-<p>We adhere to all Australian and Victorian privacy laws, including those governing disclosure to law enforcement authorities.</p>
-
-<h2 id="11-childrens-privacy-1">11. Children’s Privacy:</h2>
-
-<p>We do not process data for children. If our customers process data for children, they must inform us, and together, we will agree on a policy for handling this data.</p>
-
-<h2 id="12-international-data-transfers">12. International Data Transfers:</h2>
-
-<p>Data we process may be handled outside of Australia. In such cases, the laws of the country processing the data will apply. Companies like Microsoft, Google, OpenAI, Zapier, and Teamwork may be involved in these transfers.</p>
+  <h2>International Data Transfers:</h2>
+  <div>
+    <p>Data we process may be handled outside of Australia. In such cases, the laws of the country processing the data will apply. Companies like Microsoft, Google, OpenAI, Zapier, and Teamwork may be involved in these transfers.</p>
+  </div>
+  
+</div>
 
 			</div>
 		</section>
@@ -307,9 +340,12 @@
 <script src="/assets/js/jquery.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
+<script src="/assets/js/jquery-ui.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/skel.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/util.js"></script>
 <!--[if lte IE 8]><script src="https://www.atomdigital.com.au/assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="https://www.atomdigital.com.au/assets/js/main.js"></script>
+
+
 
 </html>
