--- a/services/zapier-consultant.html
+++ b/services/zapier-consultant.html
@@ -21,6 +21,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="/assets/css/main.css" />
+
+	<link rel="stylesheet" href="/assets/css/jquery-ui.min.css" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="/assets/css/ie9.css" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="/assets/css/ie8.css" /><![endif]-->
 	<link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
@@ -252,9 +254,12 @@
 <script src="/assets/js/jquery.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
+<script src="/assets/js/jquery-ui.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/skel.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/util.js"></script>
 <!--[if lte IE 8]><script src="https://www.atomdigital.com.au/assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="https://www.atomdigital.com.au/assets/js/main.js"></script>
+
+
 
 </html>
