Move to new focus

--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
 -->
 <head><title>About Us | ATOM Digital</title>
 	
-	<meta name="description" content="About ATOM Digital Business Software Consultancy">
+	<meta name="description" content="About ATOM Digital Business Productivity Consultancy">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -44,7 +44,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 		<li><a href="/services">Services</a></li>
 	</ul>
@@ -65,25 +65,33 @@
 				<header class="major">
 					<h1>About Us</h1>
 				</header>
-				About ATOM Digital - Business Software Consultancy
+				About ATOM Digital - Business Productivity Consultancy
 				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg"
 					alt="A team of people working at a desk on laptops" /></span>
 				<span id="scroller"></span>
-				<p>ATOM Digital helps our clients to adopt digital tools and solutions that increase sales, reduce costs and improve productivity.</p>
+				<p>ATOM Digital helps our clients to enhance their business productivity, streamline operations, and achieve sustainable growth.</p>
 
-<p>We exist to make our clients’ complex software requirements simple, successful and cost effective. By partnering with ATOM Digital, you can focus on what you do best while we look after your digital landscape.</p>
+<p>We exist to make our clients’ complex productivity challenges simple, successful, and cost-effective. By partnering with ATOM Digital, you can focus on what you do best while we look after optimizing your business processes.</p>
 
 <p>Together, we build better businesses.</p>
 
 <h2 id="principle-consultant---patrick-osullivan">Principle Consultant - <nobr>Patrick O'Sullivan</nobr></h2>
 
-<p>With over 20 years of experience, <nobr>Patrick O'Sullivan</nobr> (<a href="https://www.linkedin.com/in/patrickaosullivan/">LinkedIn</a>)  is a software expert.</p>
+<p>With over 20 years of experience, <nobr>Patrick O'Sullivan</nobr> (<a href="https://www.linkedin.com/in/patrickaosullivan/">LinkedIn</a>) is a productivity expert.</p>
 
-<p>Patrick has worked with leading Australia brands like Toyota, Optus, Steadfast and Dulux as well as a range of SMEs and not-for-profit organisations.</p>
+<p>Patrick has worked with leading Australian brands like Toyota, Optus, Steadfast, and Dulux as well as a range of SMEs and not-for-profit organizations.</p>
 
-<p>Patrick is passionate about bringing cost effective software solutions to growing businesses.</p>
+<p>Patrick is passionate about bringing cost-effective productivity solutions to growing businesses.</p>
 
-<p>He works closely with each client to ensure ATOM Digital has a meaningful and positive impact that builds a long term relationship.</p>
+<p>He works closely with each client to ensure ATOM Digital has a meaningful and positive impact that builds a long-term relationship.</p>
+
+<h2 id="consultant---juliana-zappa">Consultant - <nobr>Juliana Zappa</nobr></h2>
+
+<p>Juliana brings together processes, procedures and systems into clear documentation and training guides.</p>
+
+<p>Juliana has worked across multiple industries including Real Estate, Finance and Hospitality.</p>
+
+<p>She is passionate about empowering employees to do the best they can through clear instructions, training and support.</p>
 
 <div class="box alt">
 	<div class="row 90% uniform">
@@ -215,7 +223,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/privacy-policy/">Privacy Policy</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
+			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Productivity Transformation Ideas</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Productivity Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/privacy-policy/">Privacy Policy</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
