--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -44,7 +44,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 		<li><a href="/services">Services</a></li>
 	</ul>
@@ -65,24 +65,24 @@
 				<header class="major">
 					<h1>What we do</h1>
 				</header>
-				We help our clients to adopt digital tools and services that increase sales, reduce costs and improve productivity.
+				We help our clients to enhance productivity, increase sales, and reduce costs.
 				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
 					alt="Business people writing on a notepad in front of two laptop screens" /></span>
 				<span id="scroller"></span>
-				<p>ATOM Digital is a business software consultancy.</p>
+				<p>ATOM Digital is a business productivity consultancy.</p>
 
-<p>We specialise in helping SMEs and SMBs who do not have a dedicated technical resource.
+<p>We specialize in helping SMEs and SMBs who do not have a dedicated resource.
 We act as an extension of our client’s team and provide the skills and expertise to support their business goals.</p>
 
-<p>Our mission is to make digital tools more accessible and more available so that our clients can increase sales, reduce costs and improve productivity.</p>
+<p>Our mission is to make business processes more efficient and effective so that our clients can increase sales, reduce costs, and improve productivity.</p>
 
-<h2 id="our-role-and-focus">Our Role and focus</h2>
+<h2 id="our-role-and-focus">Our Role and Focus</h2>
 <ul>
   <li>Provide strategic leadership and analysis to identify the biggest opportunities for our clients.</li>
-  <li>Identify suitable digital tools and services, including defining the scope and carrying out vendor selection.</li>
-  <li>Oversee the change management process, including documentation, people management, communication, process change and risk mitigation.</li>
+  <li>Identify suitable productivity tools and services, including defining the scope and carrying out vendor selection.</li>
+  <li>Oversee the change management process, including documentation, people management, communication, process change, and risk mitigation.</li>
   <li>Provide coaching and training for management and key employees.</li>
-  <li>Provide monitoring, maintenance and support for digital tools and services.</li>
+  <li>Provide monitoring, maintenance, and support for productivity tools and services.</li>
 </ul>
 
 			</div>
@@ -206,7 +206,7 @@ We act as an extension of our client’s team and provide the skills and experti
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/privacy-policy/">Privacy Policy</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
+			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Productivity Transformation Ideas</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Productivity Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/privacy-policy/">Privacy Policy</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
