--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
 -->
-<head><title>ATOM Digital - Local Business Software Consultants</title>
-	<meta name="description" content="Software consultancy helping businesses in Bayside, Glen Eire, Kingston, Frankston, Greater Dandenong and Mornington Peninsula.">
+<head><title>ATOM Digital - Business Productivity Consultants</title>
+	<meta name="description" content="Productivity consultancy helping businesses in Geelong, Bayside, Glen Eire, Kingston, Frankston, Greater Dandenong and Mornington Peninsula.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -42,7 +42,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 		<li><a href="/services">Services</a></li>
 	</ul>
@@ -59,7 +59,7 @@
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
-                <h1>Business Software Consultancy</h1>
+                <h1>Business Productivity Consultancy</h1>
             </header>
             <div class="content">
                 <p style="text-transform: uppercase;">Increase sales, reduce costs and improve productivity using software.<br> We can show you how.</p>
@@ -82,16 +82,16 @@
     </a>
       <header class="major">
         <h2>What we do</h2>
-        <p>We help our clients to adopt digital tools and services that increase sales, reduce costs and improve productivity.</p>
+        <p>We help our clients to enhance productivity, increase sales, and reduce costs.</p>
       </header>
   </article><article>
-    <a href="/examples-of-digital-transformation/" class="link">
+    <a href="/examples-of-productivity-transformation/" class="link">
       <span class="image">
-        <img src="assets/images/sajad-nori-LWD60a5a15I-unsplash-864x259.jpg" alt="Examples of Digital Transformation" />
+        <img src="assets/images/sajad-nori-LWD60a5a15I-unsplash-864x259.jpg" alt="Productivity Transformation Ideas" />
       </span>
     </a>
       <header class="major">
-        <h2>Examples of Digital Transformation</h2>
+        <h2>Productivity Transformation Ideas</h2>
         <p>There are many ways that ATOM Digital can help your business.</p>
       </header>
   </article><article>
@@ -102,7 +102,7 @@
     </a>
       <header class="major">
         <h2>About Us</h2>
-        <p>About ATOM Digital - Business Software Consultancy</p>
+        <p>About ATOM Digital - Business Productivity Consultancy</p>
       </header>
   </article><article>
     <a href="/services/" class="link">
@@ -125,7 +125,7 @@
                 </header>
                 <p><p>Are you a growing business with 5 to 50 employees? Is your turnover doubling in the next 3 years? Are you experiencing a strain on your resources as you grow?</p>
 
-<p>ATOM Digital can help you get ahead of the game by taking ownership of your digital landscape. We use software tools and services to help increase sales, reduce costs and improve productivity while you focus on growth.</p>
+<p>ATOM Digital can help you get ahead of the game by optimizing your business processes and enhancing productivity. We provide solutions that increase sales, reduce costs, and improve overall productivity, allowing you to focus on growth.</p>
 </p>
                 <ul class="actions">
                     <li><a href="#contact" class="button special">Contact Us</a></li>
@@ -253,7 +253,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/privacy-policy/">Privacy Policy</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
+			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Productivity Transformation Ideas</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Productivity Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/privacy-policy/">Privacy Policy</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
