--- a/about/index.html
+++ b/about/index.html
@@ -69,11 +69,11 @@
 				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg"
 					alt="A team of people working at a desk on laptops" /></span>
 				<span id="scroller"></span>
-				<p>ATOM Digital helps our clients to enhance their business productivity, streamline operations, and achieve sustainable growth.</p>
+				<p>We bring 30 years of expertise and experience gained across a range of industries and sectors.</p>
 
-<p>We exist to make our clients’ complex productivity challenges simple, successful, and cost-effective. By partnering with ATOM Digital, you can focus on what you do best while we look after optimizing your business processes.</p>
+<p>When you work with us, you get access to all our skills and resources to fast-track your business improvement and growth.</p>
 
-<p>Together, we build better businesses.</p>
+<p>We become an extension of your team. Your business becomes our business.</p>
 
 <h2 id="principle-consultant---patrick-osullivan">Principle Consultant - <nobr>Patrick O'Sullivan</nobr></h2>
 
@@ -93,6 +93,7 @@
 
 <p>She is passionate about empowering employees to do the best they can through clear instructions, training and support.</p>
 
+<!--
 <div class="box alt">
 	<div class="row 90% uniform">
 		<div class="3u"><span class="image fit"><img src="/assets/images/brands/toyota.jpg" alt="" /></span></div>
@@ -101,6 +102,7 @@
 		<div class="3u$"><span class="image fit"><img src="/assets/images/brands/dulux.png" alt="" /></span></div>
 	</div>
 </div>
+-->
 
 			</div>
 		</section>
@@ -113,7 +115,7 @@
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Contact Us</h3>
-					<p>We offer a free, no obligation consultation to discuss your software needs. Please contact us on the email below or book a consultation via the form.</p>
+					<p>We offer a free, no obligation consultation to discuss your needs. Please contact us on the email below or book a consultation via the form.</p>
 					<div>
 						<input aria-label="contact" size="28" id="contactme" value="contact (at) atomdigital.com.au" onClick="contactMeSelect(this)" onfocusout="hideMessage()"></input>
 						<div style="display:none" id="contactSelected">Address selected. Ready to be copied.</div>
@@ -195,6 +197,8 @@
 					<hr>
 					<p>We love to work with businesses in Bayside, Glen Eire, Kingston, Frankston, Greater Dandenong and Mornington Peninsula.</p>
 					<p>This lets us get to know you, your team and your customers so we can help your business better.</p>
+					<p>We also work remotely with businesses in the USA, APAC and Europe. We align our timezone to meet international client's needs.</p>
+					
 
 				</div>
 				<div class="contact-method">
