--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
-                <h1>Business Productivity Consultancy</h1>
+                <h1>Systems and processes that save your business time and money</h1>
             </header>
             <div class="content">
-                <p style="text-transform: uppercase;">Increase sales, reduce costs and improve productivity using software.<br> We can show you how.</p>
+                <p style="text-transform: uppercase;">Increase sales, reduce costs and improve productivity.<br> We can show you how.</p>
                 <ul class="actions">
                     <li><a href="#one" class="button next scrolly">Get Started</a></li>
                 </ul>
@@ -82,7 +82,7 @@
     </a>
       <header class="major">
         <h2>What we do</h2>
-        <p>We help our clients to enhance productivity, increase sales, and reduce costs.</p>
+        <p>At ATOM Digital, we help businesses like yours who need expert guidance, advice and hands-on support to solve problems, remove bottlenecks, reduce errors, improve accuracy and save time.</p>
       </header>
   </article><article>
     <a href="/examples-of-productivity-transformation/" class="link">
@@ -143,7 +143,7 @@
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Contact Us</h3>
-					<p>We offer a free, no obligation consultation to discuss your software needs. Please contact us on the email below or book a consultation via the form.</p>
+					<p>We offer a free, no obligation consultation to discuss your needs. Please contact us on the email below or book a consultation via the form.</p>
 					<div>
 						<input aria-label="contact" size="28" id="contactme" value="contact (at) atomdigital.com.au" onClick="contactMeSelect(this)" onfocusout="hideMessage()"></input>
 						<div style="display:none" id="contactSelected">Address selected. Ready to be copied.</div>
@@ -225,6 +225,8 @@
 					<hr>
 					<p>We love to work with businesses in Bayside, Glen Eire, Kingston, Frankston, Greater Dandenong and Mornington Peninsula.</p>
 					<p>This lets us get to know you, your team and your customers so we can help your business better.</p>
+					<p>We also work remotely with businesses in the USA, APAC and Europe. We align our timezone to meet international client's needs.</p>
+					
 
 				</div>
 				<div class="contact-method">
