--- a/services/workflow-automation.html
+++ b/services/workflow-automation.html
@@ -110,7 +110,7 @@
 					<a href="#contact-us">contact us</a> for a free, no obligation consultation.
 				</div>
 				<h5>Other Services</h5>
-				<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/services/business-process-automation">Business Process Automation</a></li><li><a href="https://www.atomdigital.com.au/services/system-integration">System Integration</a></li><li><a href="https://www.atomdigital.com.au/services/sales-automation">Sales Automation</a></li><li><a href="https://www.atomdigital.com.au/services/zapier-consultant">Zapier Consulting</a></li><li><a href="https://www.atomdigital.com.au/services/business-phone-system">Business Phone System</a></li><li><a href="https://www.atomdigital.com.au/services/teamwork">Teamwork Consulting</a></li><li><a href="https://www.atomdigital.com.au/services/process-outsourcing">Process Outsourcing</a></li></ul>
+				<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/services/business-process-automation">Business Process Automation</a></li><li><a href="https://www.atomdigital.com.au/services/system-integration">System Integration</a></li><li><a href="https://www.atomdigital.com.au/services/sales-automation">Sales Automation</a></li><li><a href="https://www.atomdigital.com.au/services/business-phone-system">Business Phone System</a></li><li><a href="https://www.atomdigital.com.au/services/zapier-consultant">Zapier Consulting</a></li><li><a href="https://www.atomdigital.com.au/services/process-outsourcing">Process Outsourcing</a></li><li><a href="https://www.atomdigital.com.au/services/teamwork">Teamwork Consulting</a></li><li><a href="https://www.atomdigital.com.au/services/project-management">Project Management Consulting</a></li><li><a href="https://www.atomdigital.com.au/services/workshops">Productivity Boost Workshops</a></li></ul>
 
 			</div>
 		</section>
@@ -125,7 +125,7 @@
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Contact Us</h3>
-					<p>We offer a free, no obligation consultation to discuss your software needs. Please contact us on the email below or book a consultation via the form.</p>
+					<p>We offer a free, no obligation consultation to discuss your needs. Please contact us on the email below or book a consultation via the form.</p>
 					<div>
 						<input aria-label="contact" size="28" id="contactme" value="contact (at) atomdigital.com.au" onClick="contactMeSelect(this)" onfocusout="hideMessage()"></input>
 						<div style="display:none" id="contactSelected">Address selected. Ready to be copied.</div>
@@ -207,6 +207,8 @@
 					<hr>
 					<p>We love to work with businesses in Bayside, Glen Eire, Kingston, Frankston, Greater Dandenong and Mornington Peninsula.</p>
 					<p>This lets us get to know you, your team and your customers so we can help your business better.</p>
+					<p>We also work remotely with businesses in the USA, APAC and Europe. We align our timezone to meet international client's needs.</p>
+					
 
 				</div>
 				<div class="contact-method">
