--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -65,14 +65,15 @@
 				<header class="major">
 					<h1>What we do</h1>
 				</header>
-				We help our clients to enhance productivity, increase sales, and reduce costs.
+				At ATOM Digital, we help businesses like yours who need expert guidance, advice and hands-on support to solve problems, remove bottlenecks, reduce errors, improve accuracy and save time.
 				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
 					alt="Business people writing on a notepad in front of two laptop screens" /></span>
 				<span id="scroller"></span>
 				<p>ATOM Digital is a business productivity consultancy.</p>
 
-<p>We specialize in helping SMEs and SMBs who do not have a dedicated resource.
-We act as an extension of our client’s team and provide the skills and expertise to support their business goals.</p>
+<p>We specialise in helping business who do not have a dedicated resource that is outside of the day to day operations.</p>
+
+<p>We act as an extension of our client’s team and provide the skills and expertise to support their business goals.</p>
 
 <p>Our mission is to make business processes more efficient and effective so that our clients can increase sales, reduce costs, and improve productivity.</p>
 
@@ -96,7 +97,7 @@ We act as an extension of our client’s team and provide the skills and experti
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Contact Us</h3>
-					<p>We offer a free, no obligation consultation to discuss your software needs. Please contact us on the email below or book a consultation via the form.</p>
+					<p>We offer a free, no obligation consultation to discuss your needs. Please contact us on the email below or book a consultation via the form.</p>
 					<div>
 						<input aria-label="contact" size="28" id="contactme" value="contact (at) atomdigital.com.au" onClick="contactMeSelect(this)" onfocusout="hideMessage()"></input>
 						<div style="display:none" id="contactSelected">Address selected. Ready to be copied.</div>
@@ -178,6 +179,8 @@ We act as an extension of our client’s team and provide the skills and experti
 					<hr>
 					<p>We love to work with businesses in Bayside, Glen Eire, Kingston, Frankston, Greater Dandenong and Mornington Peninsula.</p>
 					<p>This lets us get to know you, your team and your customers so we can help your business better.</p>
+					<p>We also work remotely with businesses in the USA, APAC and Europe. We align our timezone to meet international client's needs.</p>
+					
 
 				</div>
 				<div class="contact-method">
