--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -69,9 +69,7 @@
 				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
 					alt="Business people writing on a notepad in front of two laptop screens" /></span>
 				<span id="scroller"></span>
-				<p>ATOM Digital is a business productivity consultancy.</p>
-
-<p>We specialise in helping business who do not have a dedicated resource that is outside of the day to day operations.</p>
+				<p>We specialise in helping business solve problems that are getting in the way of productivity and growth.</p>
 
 <p>We act as an extension of our client’s team and provide the skills and expertise to support their business goals.</p>
 
