--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </a>
       <header class="major">
         <h2>Our Services</h2>
-        <p>Working with ATOM Digital gives our clients access to specialists, technical resources.</p>
+        <p>We bring 30 years of expertise and experience gained across a range of industries and sectors.<br> When you work with us, you get access to all our skills and resources to fast-track your business improvement and growth.</p>
       </header>
   </article></section>
 
