--- a/services/index.html
+++ b/services/index.html
@@ -16,7 +16,7 @@
 -->
 <head><title>Our Services | ATOM Digital</title>
 	
-	<meta name="description" content="We offer Business Process Automation, System Integration, Workflow Automation, Sales Automation, Inbound Customer Contact and Process Outsourcing">
+	<meta name="description" content="ATOM">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -65,12 +65,15 @@
 				<header class="major">
 					<h1>Our Services</h1>
 				</header>
-				Working with ATOM Digital gives our clients access to specialists, technical resources.
+				We bring 30 years of expertise and experience gained across a range of industries and sectors.<br> When you work with us, you get access to all our skills and resources to fast-track your business improvement and growth.
 				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg"
 					alt="Mobile device showing a chart going upwards" /></span>
 				<span id="scroller"></span>
-				<p>It allows our clients to focus on what they do best -  running their business -  while we own and manage their technical landscape.</p>
-<p>Typically we help our clients to increase sales, reduce costs and improve productivity in the following ways.</p>
+				<p>We deliver practical, visible results through a strategic methodology that includes planning, optimising operations, training, upskilling your team, and providing ongoing support.</p>
+<p>This you can focus on what you do best -  running you business.</p>
+<p><a href="https://www.atomdigital.com.au/downloads/Business_Software_Consultancy_ATOM_Digital.pdf" target="_blank">Download</a> our PDF guide for more information on how we work.</p>
+
+<h3>Services we offer</h3>
 <div class="row">
     
     
