--- a/services/index.html
+++ b/services/index.html
@@ -70,7 +70,7 @@
 					alt="Mobile device showing a chart going upwards" /></span>
 				<span id="scroller"></span>
 				<p>We deliver practical, visible results through a strategic methodology that includes planning, optimising operations, training, upskilling your team, and providing ongoing support.</p>
-<p>This you can focus on what you do best -  running you business.</p>
+<p>This lets you  focus on what you do best -  running your business.</p>
 <p><a href="https://www.atomdigital.com.au/downloads/Business_Software_Consultancy_ATOM_Digital.pdf" target="_blank">Download</a> our PDF guide for more information on how we work.</p>
 
 <h3>Services we offer</h3>
