--- a/services/process-outsourcing.html
+++ b/services/process-outsourcing.html
@@ -213,9 +213,9 @@ This comes with an overhead of finding and recruiting the right people (which is
 					
 					</span>
 					<hr>
-					<p>We love to work with businesses in Bayside, Glen Eire, Kingston, Frankston, Greater Dandenong and Mornington Peninsula.</p>
-					<p>This lets us get to know you, your team and your customers so we can help your business better.</p>
-					<p>We also work remotely with businesses in the USA, APAC and Europe. We align our timezone to meet international client's needs.</p>
+					<p>We work closely with businesses, offering both face-to-face and remote support, to understand their unique challenges and goals. </p>
+					<p>Our team has experience delivering APAC assignments in person and supporting clients in the USA, Europe, and beyond through remote collaboration. </p>
+					<p>We align our schedule to accommodate various time zones, ensuring seamless communication for international clients.</p>
 					
 
 				</div>
