Adding inbox wizard

--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@
         <h2>Our Services</h2>
         <p>We bring 30 years of expertise and experience gained across a range of industries and sectors.<br> When you work with us, you get access to all our skills and resources to fast-track your business improvement and growth.</p>
       </header>
+  </article><article>
+    <a href="/services/inbox-wizard" class="link">
+      <span class="image">
+        <img src="" alt="Inbox Wizard" />
+      </span>
+    </a>
+      <header class="major">
+        <h2>Inbox Wizard</h2>
+        <p>Effortless, magical email management.</p>
+      </header>
   </article></section>
 
 
