--- a/services/inbox-wizard.html
+++ b/services/inbox-wizard.html
@@ -92,11 +92,13 @@
 							</ul>					</div>
 					<div class="8u$ 12u$(small)">
 						<h3>Introduction to our Inbox Wizard Service</h3>
-						<p>Managing emails doesn’t have to be a hassle. With Inbox Wizard, you’ll transform your inbox into an organized, efficient workspace where nothing falls through the cracks.</p>
+						<p>Managing emails doesn’t have to be a hassle. With Inbox Wizard, you’ll transform your inbox into an organised, efficient workspace where nothing falls through the cracks.</p>
 
 <p>Inbox Wizard empowers your team to collaborate seamlessly, automate repetitive tasks, and deliver consistent, timely responses. Say goodbye to inbox chaos and hello to a simplified, productive way to manage communication. It’s like having a magic spell for email management, making it effortless and stress-free.</p>
 
 <p>We handle the setup, configuration and training for your team so that you can say goodbye to lost emails and inefficient shared inboxes.</p>
+
+<p>If you improve how you manage and respond to emails, you will get <b>more sales</b> and <b>more satisfied customers</b>, simply by being better than your competition.</p>
 
 					</div>
 				</div>
